DFR-2123: Resolve critical, major and minor issues